--- a/major/src/main/resources/static/css/style.css
+++ b/major/src/main/resources/static/css/style.css
@@ -90,8 +90,10 @@ body {
 		width: 100%;
 	}
 	.promo_prompt {
-		width: 90vw;
-		margin-bottom: 10vh;
+		width: 90% !important;
+		margin: 0 auto !important;
+		margin-top: 10px !important;
+		margin-bottom: 40px !important;
 	}
 	.promo_img {
 		display: block;
@@ -104,6 +106,46 @@ body {
 	}
 	.site-footer {
 		margin-top: 20px;
+	}
+	.create-look-page {
+		margin: 0 !important;
+	}
+	.look-container {
+		width: 100vw !important;
+	}
+	.info-placeholder-2 {
+		max-width: 300px !important;
+	}
+	#look_add_info {
+		font-size: 20px !important;
+	}
+	#name {
+		font-size: 16px;
+		width: 90% !important;
+	}
+	.look_btn {
+		font-size: 16px;
+	}
+	#look-label {
+		font-size: 20px;
+		padding: 0 !important;
+		width: auto !important;
+		margin: 0 auto !important;
+	}
+	#look-desc {
+		margin: 0 !important;
+		font-size: 20px;
+	}
+	.look_input_description {
+		font-size: 16px;
+	}
+	.info-placeholder {
+		display: block;
+		width: 100% !important;
+	}
+	.items-placeholder {
+		display: block;
+		width: 100% !important;
 	}
 }
 
@@ -249,6 +291,7 @@ body {
     width: 100%;
     background-color: #000000;
     line-height: 1.3;
+	text-align: center;
 }
 
 .content_wrap {
@@ -268,6 +311,8 @@ body {
 	text-decoration: none;
 	box-shadow: inset 0 -1px 0 hsla(0, 0%, 100%, 0.4);
 	transition: 0.5s;
+	list-style: none;
+	display: inline-block;
 }
 
 .footer-text:hover {
@@ -353,7 +398,7 @@ body {
 
 .items-placeholder {
 	margin: 0 auto;
-	max-height: 300px;
+	overflow: auto;
 	width: 80%;
 	background-color: #272727;
 	display: block;
@@ -600,7 +645,8 @@ body {
 /* The switch - the box around the slider */
 .switch {
 	position: relative;
-	display: inline-block;
+	display: block;
+	margin: 0 auto;
 	width: 60px;
 	height: 34px;
 }
@@ -675,3 +721,45 @@ input:checked + .slider:before {
 	color: #FFFFFF;
 	border: 2px solid white;
 }
+
+.lk-container {
+	padding: 20px;
+	border: 2px solid white;
+	background: #272727;
+}
+
+.user-data-2 {
+	text-decoration: underline;
+	color: white;
+	/* margin-top: 0 !important; */
+}
+
+#user-id {
+	text-align: right;
+	font-size: 15px;
+	color: #777777;
+}
+
+#user-icon {
+	border: 2px solid white;
+	height: 200px !important; 
+	width: 200px !important;
+}
+
+
+.user-looks-placeholder {
+	margin-top: 20px !important;
+	margin: 0 auto;
+	text-align: center;
+	width: 70%;
+	background: #272727;
+	border: 2px solid white;
+	color: white;
+}
+
+.cloth-img {
+	margin: 0 20px;
+	margin-bottom: 20px !important;
+	display: inline-block;
+}
+
