--- a/major/src/main/resources/templates/index.html
+++ b/major/src/main/resources/templates/index.html
@@ -51,6 +51,7 @@
 					</div>
 				</nav>
 			</div>
+		</div>
 		<div class="container promo_box">
 			<a th:href="@{/shop/men_all/-1}" href="#"><img class="promo_img" src="../static/images/logo_grid_4_tes12t.png"></a>
 			<a th:href="@{/shop/Ladies/-1}" href="#"><img class="promo_img" src="../static/images/logo_grid_4_test.png"></a>
@@ -61,16 +62,16 @@
 					<a class="nav-link promo_nav" th:href="@{/shop/Ladies/-1}" href="#">Одежда на каждый день</a>
 				</h1>
 			</div>
-			<div class="container promo_prompt" id="sec_link">
+			<!-- <div class="container promo_prompt" id="sec_link">
 				<h1 onmouseover="chbg_2link('white')" onmouseout="chbg_2link('black')">
 					<a class="nav-link promo_nav" th:href="@{/lookamaker}" href="#">Создать свой жесткий лучелло</a>
 				</h1>
-			</div>
+			</div> -->
 		</div>
 		<div class="site-footer">
 			<ul class="foot list-unstyled">
 				<li><a class="footer-text" href="https://github.com/Dmitryq/Agregator">GitHub</a></li>
-				<li><a class="footer-text" href="https://www.google.com/doodles/">Feeling lucky?</a></li>
+				<li><a class="footer-text" th:href="@{/lookamaker}" href="#">Создать свой образ.</a></li>
 			</ul>
 		</div>
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
