--- a/major/src/main/resources/templates/lookamaker.html
+++ b/major/src/main/resources/templates/lookamaker.html
@@ -52,7 +52,7 @@
 			</div>
 		<div class="create-look-page">
 			<div class="look-container">
-				<div class="items-placeholder">
+				<div class="items-placeholder" >
 					<div id="look_add_info">Добавьте товары</div>
 					<div class="cloth-img" th:each="product : ${cart}">
 <!--						<div class="img_container">-->
@@ -81,7 +81,7 @@
 						<span class="floating-text">  shopdigger shopdigger shopdigger shopdigger shopdigger shopdigger  </span>
 					</div>
 					<div class="info-placeholder-2">
-						<input type="hidden" name="id"  th:field="{id}">
+<!--						<input type="hidden" name="id"  th:field="{id}">-->
 						<div id="look-label">Название</div>
 						<div class="look-inputs">
 							<input  id="name" type="text" required name="name" placeholder="Введите название">
