--- a/major/src/main/resources/templates/shop.html
+++ b/major/src/main/resources/templates/shop.html
@@ -52,7 +52,7 @@
          </div>
          <div class="container" style="margin-top: 30px">
             <div class="row">
-               <div class="col-sm-3">
+               <div class="col-sm-3 mob-shop">
                   <div id="categories_tag">
                      <h4 class="cart_border cart_text">Категории</h4>
                   </div>
@@ -63,7 +63,7 @@
                      <a href="" th:each="category, iStat : ${categories}"
                         th:href="@{/shop/{sex}/{productType}(productType=${category.id}, sex=${sex})}">
                         <li
-                           class="list-group-item cart_border_notop cart_text" th:text="${category.name}"></li>
+                           class="list-group-item cart_border_notop cart_text cart-text-mob" th:text="${category.name}"></li>
                      </a>
                   </ul>
                </div>
