--- a/major/src/main/resources/templates/shop.html
+++ b/major/src/main/resources/templates/shop.html
@@ -32,7 +32,10 @@
                      <div class="form-search">
                         <form class="form-inline my-2 my-lg-0" th:action="@{/shopSearch/{sex}/{productType}(productType=${productType}, sex=${sex})}" th:method="GET">
                            <input class="input-search" type="search" name="search" placeholder="Что ищем?" aria-label="search">
-                           <button class="seacrh-btn search-btn-outline-success" type="submit">Поиск</button>
+                           <button class="search-btn-outline-success">
+                              <img id="search-icon"  th:src="@{/images/search.png}" src="../static/images/search.png">
+                              Поиск
+                          </button>
                         </form>
                      </div>
                      <ul class="navbar-nav mr-auto">
