--- a/major/src/main/resources/templates/cart.html
+++ b/major/src/main/resources/templates/cart.html
@@ -34,7 +34,8 @@
 									<button class="search-btn-outline-success">
 										<img id="search-icon"  th:src="@{/images/search.png}" src="../static/images/search.png">
 										Поиск
-									</button>								</form>
+									</button>
+								</form>
 							</div>
 							<ul class="navbar-nav mr-auto">
 							</ul>
