--- a/major/src/main/resources/templates/shop.html
+++ b/major/src/main/resources/templates/shop.html
@@ -66,7 +66,7 @@
                      <a href="" th:each="category, iStat : ${categories}"
                         th:href="@{/shop/{sex}/{productType}(productType=${category.id}, sex=${sex})}">
                         <li
-                           class="list-group-item cart_border_notop cart_text cart-text-mob" th:text="${category.name}"></li>
+                           class="list-group-item cart_border_notop cart_text cart-text-mob category-name" th:text="${category.name}"></li>
                      </a>
                   </ul>
                </div>
@@ -81,7 +81,7 @@
                               <h5 class="card-title" th:text="${product.name}">??вставить сюда название товара??</h5>
                               <h4 class="item-price">$63<span th:text="${product.price}"></span></h4>
                               <p th:text="${product.brand}" >Бренд</p>
-                              <p th:text="${product.categoryName}" >Пол (хз нах нужен)</p>
+                              <p class='SEX' th:text="${product.categoryName}" >Пол (хз нах нужен)</p>
                               <a href="#" th:href="@{/shop/viewproduct/{id}(id=${product.code})}" class="btn cart_btn">Просмотр</a>
                               <a href="#" th:href="@{${product.linkPdp}}" class="btn cart_btn">На сайт магазина</a>
                            </div>
