--- a/major/src/main/resources/templates/cart.html
+++ b/major/src/main/resources/templates/cart.html
@@ -114,7 +114,7 @@
 														<a href="#" th:href="@{${product.linkPdp}}" class="btn cart_btn">На сайт магазина</a>
 
 													</div>
-													<p class="mb-0"><span><strong>$<span th:text="${product.price}"></span></strong></span></p>
+													<p class="mb-0"><span><strong>$<span class="item-price" th:text="${product.price}"></span></strong></span></p>
 												</div>
 											</div>
 										</div>
@@ -136,24 +136,14 @@
 							<div class="card mb-4">
 								<div class="card-body cart_border">
 
-									<h5 class="mb-3 cart_text">The total amount </h5>
+									<h5 class="mb-3 cart_text">Сумма товаров </h5>
 
 									<ul class="list-group list-group-flush">
-										<li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0 cart_text cart_border">
-											Amount Payable
-											<span>$<span th:text="${total}"></span></span>
-										</li>
-										<li class="list-group-item d-flex justify-content-between align-items-center px-0 cart_text cart_border">
-											SOs
-										</li>
 										<li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3 cart_text cart_border">
 											<div>
-												<strong>The total amount of</strong>
-												<strong>
-													<p class="mb-0">(including VAT)</p>
-												</strong>
+												<strong>Общая сумма составляет</strong>
 											</div>
-											<span><strong>$<span th:text="${total}"></span></strong></span>
+											<span><strong>$<span class="item-price" th:text="${total}"></span></strong></span>
 										</li>
 									</ul>
 
@@ -197,11 +187,14 @@
 
 			</div>
 		</main>
-		
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 		<script src="../static/js/popper.min.js"></script>
+		<script src="../static/js/price-conversion.js"></script>
 		<script src="../static/js/kostili.js"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+		<script type="text/javascript" th:src="@{/js/price-conversion.js}"></script>
+		<script type="text/javascript" th:src="@{/js/popper.min.js}"></script>
+		<script type="text/javascript" th:src="@{/js/kostili.js}"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstr
 		</div>
 		<div class="site-footer">
 			<ul class="foot list-unstyled">
