--- a/major/src/main/resources/templates/cart.html
+++ b/major/src/main/resources/templates/cart.html
@@ -194,8 +194,8 @@
 		<script type="text/javascript" th:src="@{/js/price-conversion.js}"></script>
 		<script type="text/javascript" th:src="@{/js/popper.min.js}"></script>
 		<script type="text/javascript" th:src="@{/js/kostili.js}"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstr
-		</div>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+	</div>
 		<div class="site-footer">
 			<ul class="foot list-unstyled">
 				<li><a class="footer-text" href="https://github.com/Dmitryq/Agregator">GitHub</a></li>
