--- a/major/src/main/resources/templates/profile.html
+++ b/major/src/main/resources/templates/profile.html
@@ -69,7 +69,7 @@
       <div class="user-looks-placeholder">
          <div id="look_add_info">Ваши образы</div>
          <div class="user-looks" th:each="set : ${clothSet}">
-            <p id="look-name" th:text="${set.name}" >Название</p>
+            <p id="look-name" th:text="${set.name}" >fasasdfafsdasdfsafdfsdafsadsfadfasafsd</p>
             <div class="user-look-div">
                <img class="created-look-img"
                     th:src="@{${set.getProducts().get(0).logoPicture}}"
