--- a/major/src/main/resources/templates/viewProduct.html
+++ b/major/src/main/resources/templates/viewProduct.html
@@ -45,6 +45,7 @@
 							  <!--          <li class="nav-item active"> <a class="nav-link" th:href="@{/shop/-1}" href="#">shop</a> </li>-->
 							  <li class="nav-item active"> <a class="nav-link mobile_auth" sec:authorize="isAnonymous()" th:href="@{/login}" href="#">Войти</a> </li>
 							  <li class="nav-item active"> <a class="nav-link mobile_auth" sec:authorize="isAuthenticated()" th:href="@{/logout}" href="#">Выйти</a> </li>
+                       <li class="nav-item active"> <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/profile}" href="#">Профиль</a> </li>
 							  <li class="nav-item active"> <a class="nav-link" th:href="@{/cart}" href="#">Избранное</a> </li>
 							  <li class="nav-item active"> <span class="nav-link" th:text="${cartCount}">750</span> </li>
 						  </ul>
