--- a/major/src/main/resources/templates/cart.html
+++ b/major/src/main/resources/templates/cart.html
@@ -143,7 +143,7 @@
 											<div>
 												<strong>Общая сумма составляет</strong>
 											</div>
-											<span><strong>$<span class="item-price" th:text="${total}"></span></strong></span>
+											<span><strong class="item-price">$<span th:text="${total}"></span></strong></span>
 										</li>
 									</ul>
 
