--- a/major/src/main/resources/templates/clothsetpage.html
+++ b/major/src/main/resources/templates/clothsetpage.html
@@ -31,7 +31,10 @@
           <div class="form-search">
             <form class="form-inline">
               <input class="input-search" type="search" placeholder="Что ищем?" aria-label="search">
-              <button class="search-btn-outline-success" type="submit">Поиск</button>
+              <button class="search-btn-outline-success">
+                <img id="search-icon"  th:src="@{/images/search.png}" src="../static/images/search.png">
+                Поиск
+              </button>
             </form>
           </div>
           <ul class="navbar-nav mr-auto">
